[project]
name = "geass"
version = "0.2.1"
readme = "README.md"
license = "MIT"
description = "Opinionated CLI for generating transcripts to use with LLMs"
authors = [
    { name = "Tony Kabilan Okeke", email = "tonykabilanokeke@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.6.4",
    "rich==13.7.1",
    "modal>=0.73.92",
    "fastlite>=0.1.2",
    "faster-whisper>=1.1.1",
    "typer>=0.15.0",
    "mutagen>=1.47.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ipython-icat>=0.2.2",
    "ipdb>=0.13.13",
]
test = [
    "httpx==0.27.0",
    "pytest>=8.3.3",
]

[project.scripts]
geass = "geass:cli"

[project.urls]
Homepage = "https://github.com/Kabilan108/geass"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geass"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv]
package = true
